# awssox

./: .gitignore  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  tests.yml
awssox/: __init__.py  awssox.py
tests/unit/: test_awssox.py
